# thesis_repo

cloudRunLogs/logs-masters/: factoial-rust_2warm_1.csv  factorial-cpp_1cold.csv  factorial-cpp_1warm_0.csv  factorial-cpp_1warm_1.csv  factorial-cpp_2cold.csv  factorial-cpp_2warm_0.csv  factorial-cpp_2warm_1.csv  factorial-go_1warm_0.csv  factorial-go_1warm_1.csv  factorial-go_2warm_0.csv  factorial-go_2warm_1.csv  factorial-rust_1warm_0.csv  factorial-rust_1warm_1.csv  factorial-rust_2warm_0.csv
cloudRunLogs/logs-masters/fannkuck-redux/: fannkuch-cpp_warmstarts_1gen_0.csv  (+13 more)
cpp_algorithms/cpp-factorial/: CMakeLists.txt  bootstrap-cloud-run-hello.sh  cloud_run_hello.cc  cloudbuild.yaml  vcpkg.json
cpp_algorithms/cpp-fannkuch/: Dockerfile  cloud_run_hello.cc  cloudbuild.yaml
cpp_algorithms/cpp-nbody/: cloud_run_hello.cc  cloudbuild.yaml
cpp_algorithms/cpp-prime/: Dockerfile  cloudbuild.yaml
go_algorithms/factorial-go/: cloudbuild.yaml  main.go
go_algorithms/fannkuch-go/: Dockerfile  cloudbuild.yaml  main.go
go_algorithms/prime-go/: Dockerfile  cloudbuild.yaml  main.go
rust_algorithms/factorial/: Cargo.toml  cloudbuild.yaml
rust_algorithms/fannkuch-redux/: Cargo.toml  Dockerfile  cloudbuild.yaml
rust_algorithms/fannkuch-redux/src/: main.rs
rust_algorithms/hello-world/: Cargo.toml  Dockerfile  cloudbuild.yaml
rust_algorithms/mandelbrot/: Cargo.toml  cloudbuild.yaml
rust_algorithms/mandelbrot/src/: main.rs
rust_algorithms/nbody/: Cargo.toml  Dockerfile  cloudbuild.yaml
rust_algorithms/prime_number/: Cargo.toml  Dockerfile  cloudbuild.yaml
(+16 files in other folders)
