[package]
name = "rust-fannkuch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "1.3", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
rayon = "1.6"

[build]
target-cpu = "ivybridge"

[profile.release]
opt-level = 3
codegen-units = 1
